webpack config 作成

--- a/package.json
+++ b/package.json
@@ -4,8 +4,17 @@
   "description": "\u0016practice",
   "main": "\u001b[D\u001b[D\u001b[D\u001bmain\u001b[B\u001b[\u001b[C\u001b[main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:dev": "webpack --config webpack.config.js"
   },
   "author": "sannkaku",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10"
+  }
 }
