--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "\u001b[D\u001b[D\u001b[D\u001bmain\u001b[B\u001b[\u001b[C\u001b[main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:dev": "webpack --config webpack.config.js"
+    "build:dev": "webpack --config webpack.config.js",
+    "serve": "webpack-dev-server --config webpack.config.js"
   },
   "author": "sannkaku",
   "license": "ISC",
@@ -14,7 +15,9 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
+    "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   }
 }
